--- a/MonitoringTool/static/base.html
+++ b/MonitoringTool/static/base.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <title>ANSSI Monitoring Tool</title>
     <link rel="stylesheet" href="/static/style.css">
-    <script href="/static/main.js"></script>
+    <script src="/static/main.js"></script>
 </head>
 <body>
     {% block content %}
